# python-challenge-1

./: .algokit.toml  PULL_REQUEST_TEMPLATE.md  README.md  package-lock.json  package.json  python-challenge-1.code-workspace
projects/challenge/: .copier-answers.yml  README.md  pyproject.toml
projects/challenge/.algokit/generators/create_contract/smart_contracts/{{ contract_name }}/: deploy_config.py.j2
projects/challenge/.tours/: getting-started-with-your-algokit-project.tour
projects/challenge/smart_contracts/: README.md
projects/challenge/smart_contracts/artifacts/personal_vault/: PersonalVault.approval.teal  PersonalVault.arc32.json  PersonalVault.clear.teal  client.py
projects/challenge/smart_contracts/helpers/: build.py
projects/challenge/smart_contracts/personal_vault/: contract.py  deploy_config.py
projects/python-challenge-1/: .algokit.toml  README.md  pyproject.toml
projects/python-challenge-1/smart_contracts/personal_vault/: contract.py  deploy_config.py
python-challenge-1/: pyproject.toml
